[workspace]
members = ["bin/noxd","kernel", "logger", "primitives/kernel", "runtime"]
resolver = "3"

[workspace.package]
version = "0.1.0"
license = "BSD-3-Clause"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5.50", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.7.5", features = ["derive"] }
nx-kernel = { path = "kernel", default-features = false }
nx-runtime = { path = "runtime", default-features = false }
nx-logger = { path = "logger", default-features = false }
pnx-kernel = { path = "primitives/kernel", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.20" }

[workspace.lints.clippy]
all = { level = "allow" }
pedantic = { level = "warn" }
nursery = { level = "allow" }
expect_used = { level = "deny" }
unwrap_used = { level = "deny" }
panic = { level = "deny" }

[profile.dev]
debug = "line-tables-only"

[profile.release]
lto = "thin"
